--- a/Modesty/Modesty-Info.plist
+++ b/Modesty/Modesty-Info.plist
@@ -40,6 +40,10 @@
 			<false/>
 		</dict>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Minecraft Evenings.otf</string>
+	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
