--- a/Modesty/Modesty-Info.plist
+++ b/Modesty/Modesty-Info.plist
@@ -17,13 +17,17 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.0</string>
+	<string>1.1.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>5</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.jukaela.Modesty.watchkitapp.activity</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Minecraft Evenings.otf</string>
